--- a/Code/vajrang/August2022/AugustTeam2022/Main.xaml
+++ b/Code/vajrang/August2022/AugustTeam2022/Main.xaml
@@ -4,7 +4,7 @@ xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities"
 xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation"
 xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation"
-xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=mscorlib"
+xmlns:sco="clr-namespace:System.Collections.ObjectModel;assembly=System.Private.CoreLib"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <TextExpression.NamespacesForImplementation>
         <sco:Collection x:TypeArguments="x:String">
