--- a/Code/vajrang/August2022/AugustTeam2022/Week4/RandomUserAutomation/StorageStore.xaml
+++ b/Code/vajrang/August2022/AugustTeam2022/Week4/RandomUserAutomation/StorageStore.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="StorageStore" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="495.33333333333326,902.6666666666666" sap2010:WorkflowViewState.IdRef="StorageStore_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:ucas="clr-namespace:UiPath.Core.Activities.Storage;assembly=UiPath.System.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:upr="clr-namespace:UiPath.Platform.ResourceHandling;assembly=UiPath.Platform" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="StorageStore" VisualBasic.Settings="{x:Null}" sap:VirtualizedContainerService.HintSize="967.3333333333334,458" sap2010:WorkflowViewState.IdRef="StorageStore_1" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:ucas="clr-namespace:UiPath.Core.Activities.Storage;assembly=UiPath.System.Activities" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:upr="clr-namespace:UiPath.Platform.ResourceHandling;assembly=UiPath.Platform" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="25">
       <x:String>System.Activities</x:String>
@@ -50,7 +50,7 @@
       <AssemblyReference>System.Reflection.Metadata</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="StorageStore" sap:VirtualizedContainerService.HintSize="400,838" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="StorageStore" sap:VirtualizedContainerService.HintSize="376,362" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="upr:IResource" Name="IResourceImage" />
       <Variable x:TypeArguments="scg:IEnumerable(ucas:StorageFileInfo)" Name="filesList" />
@@ -60,7 +60,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ucas:ListStorageFiles Filter="{x:Null}" TimeoutMS="{x:Null}" Directory="[string.Format(&quot;&quot;&quot;&quot;&quot;&quot;)]" DisplayName="List Storage Files" FolderPath="[string.Format(&quot;&quot;&quot;Shared'&quot;)]" sap:VirtualizedContainerService.HintSize="358,564.6666666666666" sap2010:WorkflowViewState.IdRef="ListStorageFiles_1" Recursive="True" Result="[filesList]" StorageBucketName="[string.Format(&quot;&quot;&quot;ProfilePics&quot;&quot;&quot;)]" />
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="358,143.33333333333334" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[filesList.count.ToString]" />
+    <ucas:ListStorageFiles Filter="{x:Null}" TimeoutMS="{x:Null}" Directory="Shared" DisplayName="List Storage Files" FolderPath="[string.Format(&quot;&quot;&quot;Shared'&quot;)]" sap:VirtualizedContainerService.HintSize="334,135.33333333333334" sap2010:WorkflowViewState.IdRef="ListStorageFiles_1" Recursive="True" Result="[filesList]" StorageBucketName="ProfilePics" />
+    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,94.66666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_1" Message="[filesList.count.ToString]" />
   </Sequence>
 </Activity>
